<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fieldsHolder"/>

    <LinearLayout
        android:id="@+id/fieldsHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:padding="5dp"
            android:hint="@string/username_hint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/firstName_hint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/lastName_hint"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/register_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldsHolder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldsHolder"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>